--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,25 @@
 [tox]
-envlist =
-    py27-django{17,18,19,110,111},
-    py34-django{17,18,19,110,111},
-    flake8
+envlist = py{27,35,36}-dj{18,19,110},flake8
 
 [testenv]
+setenv =
+    DJANGO_SETTINGS_MODULE = tests.testapp.settings
+    PYTHONPATH = {toxinidir}
 deps =
-    django17: Django>=1.7,<1.8
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
-    django111: Django>=1.11a,<2.0
+    dj17: Django>=1.7,<1.8
+    dj18: Django>=1.8,<1.9
+    dj19: Django>=1.9,<1.10
+    dj110: Django>=1.10,<1.11
     coverage
     mock
     pyenchant
+    pytest
 commands =
     python setup.py develop
+    pip freeze
+    python -V
     coverage run --branch --source=tinymce setup.py test
     coverage report -m --omit=tinymce/test*
-    pip freeze
 
 [testenv:flake8]
 deps =
