--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
   - DJANGO_VERSION=Django
 matrix:
   fast_finish: true
+  allow_failures:
+    - env: DJANGO_VERSION=Django
   exclude:
   - python: 2.7
     env: DJANGO_VERSION=Django
