--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,30 @@
 [tox]
 envlist =
-    py36-django{22,30,31},
-    py37-django{22,30,31},
-    py38-django{22,30,31},
-    py39-django{22,30,31},
+    py{36,37,38,39}-dj{22,30,31,dev}
     flake8
 
 [testenv]
 deps =
-    django22: Django>=2.2,<3.0
-    django30: Django>=3.0,<3.1
-    django31: Django>=3.1,<3.2
+    dj22: Django>=2.2,<3.0
+    dj30: Django>=3.0,<3.1
+    dj31: Django>=3.1,<3.2
+    djdev: https://github.com/django/django/archive/master.tar.gz
     coverage
     pyenchant
+usedevelop = True
+ignore_outcome =
+    djdev: True
 commands =
-    python setup.py develop
-    coverage run --branch --source=tinymce setup.py test
-    coverage report -m --omit=tinymce/test*
+    coverage run {envbindir}/django-admin test
+    coverage report -m
+    coverage xml
     pip freeze
+setenv =
+    DJANGO_SETTINGS_MODULE=tests.settings
+    PYTHONPATH={toxinidir}
 
 [testenv:flake8]
 deps =
     flake8
 commands =
-    flake8 tinymce --ignore=E501,E402
+    flake8 tinymce --ignore=E501,E402,W503
