Add gh-actions matrix map.

--- a/tox.ini
+++ b/tox.ini
@@ -28,3 +28,17 @@ deps =
     flake8
 commands =
     flake8 tinymce --ignore=E501,E402,W503
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37, flake8
+    3.8: py38
+    3.9: py39
+
+[gh-actions:env]
+DJANGO =
+    2.2: dj22
+    3.0: dj30
+    3.1: dj31
+    dev: djdev
