--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py{36,37,38,39}-dj{22,30,31,dev}
+    py{36,37,38,39}-dj{22,30,31}
+    py{38,39}-djmain
     flake8
 
 [testenv]
@@ -8,12 +9,12 @@ deps =
     dj22: Django>=2.2,<3.0
     dj30: Django>=3.0,<3.1
     dj31: Django>=3.1,<3.2
-    djdev: https://github.com/django/django/archive/master.tar.gz
+    djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     pyenchant
 usedevelop = True
 ignore_outcome =
-    djdev: True
+    djmain: True
 commands =
     coverage run {envbindir}/django-admin test
     coverage report -m
@@ -41,4 +42,4 @@ DJANGO =
     2.2: dj22
     3.0: dj30
     3.1: dj31
-    dev: djdev
+    main: djmain
