--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    py{37,38,39}-dj{22,31}
+    py{37,38,39}-dj22
     py{37,38,39,310}-dj32
-    py{38,39,310}-dj{40,main}
+    py{38,39,310}-dj{40,41,main}
     flake8
 
 [testenv]
@@ -11,6 +11,7 @@ deps =
     dj31: Django>=3.1,<3.2
     dj32: Django>=3.2,<4.0
     dj40: Django>=4.0,<4.1
+    dj41: Django>=4.1,<4.2
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     pyenchant
@@ -42,7 +43,7 @@ python =
 [gh-actions:env]
 DJANGO =
     2.2: dj22
-    3.1: dj31
     3.2: dj32
     4.0: dj40
+    4.1: dj41
     main: djmain
