--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 5
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        django-version: ['2.2', '3.2', '4.0', '4.1', 'main']
+        django-version: ['3.2', '4.0', '4.1', 'main']
         exclude:
           - python-version: 3.7
             django-version: 4.0
@@ -19,8 +19,6 @@ jobs:
             django-version: 4.1
           - python-version: 3.7
             django-version: main
-          - python-version: 3.10
-            django-version: 2.2
 
     steps:
     - uses: actions/checkout@v3
