--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
-    py{37,38,39,310}-dj32
-    py{38,39,310}-dj{40,41,main}
+    py{38,39,310}-dj32
+    py{38,39,310,311,312}-dj42
+    py{310,311,312}-dj{50,main}
     flake8
 
 [testenv]
@@ -9,6 +10,8 @@ deps =
     dj32: Django>=3.2,<4.0
     dj40: Django>=4.0,<4.1
     dj41: Django>=4.1,<4.2
+    dj42: Django>=4.2,<5.0
+    dj50: Django>=5.0,<5.1
     djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
     pyenchant
@@ -32,14 +35,15 @@ commands =
 
 [gh-actions]
 python =
-    3.7: py37, flake8
-    3.8: py38
+    3.8: py38, flake8
     3.9: py39
     3.10: py310
+    3.11: py311
+    3.12: py312
 
 [gh-actions:env]
 DJANGO =
     3.2: dj32
-    4.0: dj40
-    4.1: dj41
+    4.2: dj42
+    5.0: dj50
     main: djmain
