--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
     djmain: https://github.com/django/django/archive/main.tar.gz
-    coverage
+    coverage[toml]
     pyenchant
 usedevelop = True
 ignore_outcome =
