Update package license information

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ maintainers = [
   {name = "Rémy Hubscher", email = "hubscher.remy@gmail.com"},
   {name = "Claude Paroz", email = "claude@2xlibre.net"},
 ]
-license = {text = "MIT License"}
+license = "MIT AND GPL-2.0-or-later"
+license-files = [
+  "LICENSE.txt",
+  "tinymce/static/tinymce/license.md",
+]
 requires-python = ">=3.9"
 dependencies = [
   "django>=4.2",
@@ -31,7 +35,6 @@ classifiers = [
   "Framework :: Django :: 5.1",
   "Framework :: Django :: 5.2",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
